--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -36,6 +36,7 @@ Legend:
 	(+) Template hook added on bottom of all views
 	(+) Google Fonts selectable from template settings
 	(+) Link Bar instead of Top Menu selectable from template settings
+	(+) Selected option id in select list and radio button added as attribute into XML output
 
 	(#) Warnings/notices in SobiPro panel, if no news available from our server
 	(#) Version of information field in fields manager missing
