--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -280,7 +280,7 @@ SP.FM.IS_REQUIRED="Is Required"
 SP.FM.IS_EDITABLE="Is Editable"
 SP.FM.SHOW_LABEL="Show Label"
 SP.FM.EDIT_LIMITS="Edit Limits"
-SP.FM.FIELD_TYPE="Field Type"
+SP.FM.FIELD_TYPE="Field Information"
 SP.FM.PAYMENT="Payment"
 SP.FM.FOR_FREE="For Free"
 SP.FM.TXT.ALLOW_HTML="Allow HTML Code"
