(!) Added "tmp" in exception while displaying the template's files

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -41,6 +41,7 @@ Legend:
 
 	(!) Cleaning Joomla! cache - removing only the "page" group
 	(!) Field version info moved to 'General Field Settings'
+	(!) Added "tmp" in exception while displaying the template's files
 
 	(#) Warnings/notices in SobiPro panel, if no news available from our server
 	(#) Version of information field in fields manager missing
