--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -42,6 +42,7 @@ Legend:
 	(!) Cleaning Joomla! cache - removing only the "page" group
 	(!) Field version info moved to 'General Field Settings'
 	(!) HTML tags now possible in helptext (field description)
+	(!) Added "tmp" in exception while displaying the template's files
 
 	(#) Warnings/notices in SobiPro panel, if no news available from our server
 	(#) Version of information field in fields manager missing
