--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -29,6 +29,8 @@ Legend:
 -------------------
 1.2.5 ()
 -------------------
+	(+) Image field: original image name without extension used for alt and title tag
+
 	(#) textarea width in entry form set to 100% if WYSIWYG is used
 	(#) textarea in entry form checked for empty height and set default value
 
