some tmplate texts moved to global text file

--- a/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -17,6 +17,9 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
+SP.ENTRY_REQUIRED_MESSAGE = "Fields marked with a star have to be filled in!"
+SP.ALPHALIST_SELECT = "Select"
+
 SP.CATEGORY_STATUS_UNPUBLISHED="The category's status of this particular category is 'unpublished'. You can see this category because you have permission to see unpublished categories."
 SP.FD.URL_ADDRESS="URL address"
 SP.IMAGE_UPLOADED_CROP="File \"%s\" has been uploaded. Click on the image preview to change the visible area."
