--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -39,6 +39,7 @@ Legend:
 	(#) textarea width in entry form set to 100% if WYSIWYG is used
 	(#) textarea in entry form checked for empty height and set default value
 	(#) Entry history screen malformed if no user given (entry renewal requests)
+	(#) Codemirror styles in back-end got overwritten by SobiPro
 
 
 -------------------
