Custom fields for categories. First working version. Need some adjustments though

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,13 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
+
+SP.TB.NEW_ENTRY_FIELD="Add New Entry Field"
+SP.TB.NEW_CATEGORY_FIELD="Add New Category Field"
+SP.FMN.ENTRY_FIELDS="Entry's Fields"
+SP.FMN.CATEGORIES_FIELDS="Category's Fields"
+SP.CAT.CATEGORY_CUSTOM_FIELDS="Custom Fields"
+
 SP.FMN.CC_POPULATED_SELECT_LIST="Populated Select List"
 
 SP.REQ.MOREINFO="SobiPro is checking your system and will tell you if your server doesn't fulfill the requirements (scroll down to see the whole list). A green <span class=\"label label-success\">Success</span> means a requirement is fulfilled and an orange <span class=\"label label-warning\">Warning</span> means some features in SobiPro won't work. A red <span class=\"label label-important\">Error</span> is a stopper and needs action. If your server does not fulfill the requirements, please read through the <a href=\"https://www.sigsiu.net/sobipro/requirements\" target=\"blank\">detailed description of the requirements</a> on our site for more information."
