(#) Wrong date format while duplicating a template (Issue #1661)

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -44,6 +44,7 @@ Legend:
 	(#) Missing icon in category data if using font instead of file (#1647)
 	(#) Added nid to subcategories nodes (Issue #1648)
 	(#) Info field, import method incompatibility with PHP 7 fixed (Issue #1662)
+	(#) Wrong date format while duplicating a template (Issue #1661)
 
 
 -------------------
