--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -45,6 +45,7 @@ Legend:
 	(#) Added nid to subcategories nodes (Issue #1648)
 	(#) Info field, import method incompatibility with PHP 7 fixed (Issue #1662)
 	(#) Info field not available when editing an entry (non superuser only)
+	(#) Wrong date format while duplicating a template (Issue #1661)
 
 
 -------------------
