--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -46,6 +46,7 @@ Legend:
 	(#) Info field, import method incompatibility with PHP 7 fixed (Issue #1662)
 	(#) Info field not available when editing an entry (non superuser only)
 	(#) Wrong date format while duplicating a template (Issue #1661)
+	(#) Meta description ordering fixed (Issue #1658)
 
 
 -------------------
