--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -18,9 +18,9 @@
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
 
-SP.FMN.ENTRY_FIELDS="Entry's Fields"
-SP.FMN.CATEGORIES_FIELDS="Category's Fields"
-SP.CAT.CATEGORY_CUSTOM_FIELDS="Custom Fields"
+SP.FMN.ENTRY_FIELDS="Entry Fields"
+SP.FMN.CATEGORIES_FIELDS="Category Fields"
+SP.CAT.CATEGORY_CUSTOM_FIELDS="Fields"
 
 SP.FMN.CC_POPULATED_SELECT_LIST="Populated Select List"
 
