Implementation of category fields output

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -84,6 +84,10 @@ SP.TP.CONFIG.PAGINATION="Pagination"
 SP.TP.CONFIG.PAG_AJAX="Ajax"
 SP.TP.CONFIG.PAG_STD="Standard"
 SP.TP.CONFIG.SHOW_NONE="None"
+SP.TP.CONFIG.FIELDSPOS="Fields Position"
+SP.TP.CONFIG.FIELDSPOS_ABOVE="Above subcategories and entries"
+SP.TP.CONFIG.FIELDSPOS_BETWEEN="Between subcategories and entries"
+SP.TP.CONFIG.FIELDSPOS_BELOW="Below subcategories and entries"
 
 SP.TP.SETTINGS_APPS="Applications"
 SP.TP.CONFIG.APPRAR="Review & Rating Application"
