--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -31,12 +31,15 @@ Legend:
 -------------------
 	(+) Image field: original image name without extension used for alt and title tag
 	(+) Possibility to add custom fields to a category
+	(+) Colour styles for Gallery field added
 
 	(!) publishing_format set to a more readable format by default
 	(!) B3 template folder renamed to 'b3-default3' as path names have to be lowercase
 	(!) Payment page shows name of the entry
 	(!) Payment page shows name of the section
 	(!) Small back-end layout refreshments
+
+	(-) SobiPro template theme 'blackwidow' removed
 
 	(#) textarea width in entry form set to 100% if WYSIWYG is used
 	(#) textarea in entry form checked for empty height and set default value
