(+) Possibility to redirect to login page if only registered users can add entries in B3-default3 template

--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -45,6 +45,7 @@ SP.TP.CONFIG.ENTRY_HELPPOSITION="Description position"
 SP.TP.CONFIG.ENTRY_HELPPOSITION_POPUP="popup"
 SP.TP.CONFIG.ENTRY_HELPPOSITION_ABOVE="above"
 SP.TP.CONFIG.ENTRY_HELPPOSITION_BELOW="below"
+SP.TP.CONFIG.ENTRY_REDIRECTLOGIN="Redirect to login page"
 
 SP.TP.SETTINGS_SEARCH="Search Form Settings"
 SP.TP.SETTINGS_SEARCHGENERAL="General Settings"
