--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -32,6 +32,7 @@ Legend:
 	(+) Image field: original image name without extension used for alt and title tag
 	(+) Possibility to add custom fields to a category
 	(+) Colour styles for Gallery field added
+	(+) Possibility to redirect to login page if only registered users can add entries in B3-default3 template
 
 	(!) publishing_format set to a more readable format by default
 	(!) B3 template folder renamed to 'b3-default3' as path names have to be lowercase
