--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -64,6 +64,7 @@ Legend:
 	(#) Ensuring that no negative limitStart can be passed to a query
 	(#) If no custom label for a URL set, but label given in the settings, it wasn't used
 	(#) If no custom label for an email set, but label given in the settings, it wasn't used
+	(#) Notices in router (Issue #1678)
 
 
 -------------------
