parent category edit button

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,7 +17,8 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
-
+SP.AMN.EDIT="Edit"
+SP.TB.SUBCATEGORY="Sub-Category"
 SP.FMN.ENTRY_FIELDS="Entry Fields"
 SP.FMN.CATEGORIES_FIELDS="Category Fields"
 SP.CAT.CATEGORY_CUSTOM_FIELDS="Fields"
