--- a/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.about.ini
@@ -17,6 +17,7 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
+SP.ABOUT.SP_DESC2=" The pioneer of the multi-directory feature, provides now as first component, the category fields!"
 SP.ABOUT.ABOUT_PANE="About SobiPro"
 SP.ABOUT.SP_DESC="SobiPro is a Joomla! component with content construction support, which is mainly designed to be used as a directory component."
 SP.ABOUT.DEVELOPED_AND_DESIGNED="Developed and designed by %s and %s."
