--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -19,6 +19,7 @@
 
 SP.AMN.EDIT="Edit"
 SP.TB.SUBCATEGORY="Sub-Category"
+SP.TB.SECTION="SECTION"
 SP.FMN.ENTRY_FIELDS="Entry Fields"
 SP.FMN.CATEGORIES_FIELDS="Category Fields"
 SP.CAT.CATEGORY_CUSTOM_FIELDS="Fields"
