(#) Notices in multilingual mode (Issue #1693)

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -103,6 +103,7 @@ Legend:
 	(#) "finaliseSave" method on category field called even if disabled (Issue #1645)
 	(#) Removing empty segment from router (Issue #1373)
 	(#) Select List -> dependency method: wrong option displayed (Issue #1694)
+	(#) Notices in multilingual mode (Issue #1693)
 
 
 -------------------
