--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -69,6 +69,9 @@ Legend:
 	(#) If no custom label for a URL set, but label given in the settings, it wasn't used
 	(#) If no custom label for an email set, but label given in the settings, it wasn't used
 	(#) Notices in router (Issue #1678)
+	(#) Select List -> dependency method: wrong option displayed (Issue #1694)
+	(#) Notices in multilingual mode (Issue #1693)
+	(#) Email and URL field show label value when Custom Title option is disabled (Issue #1689)
 
 
 -------------------
@@ -102,8 +105,6 @@ Legend:
 	(#) Wrong order in aliases in multilingual mode (Issue #1627)
 	(#) "finaliseSave" method on category field called even if disabled (Issue #1645)
 	(#) Removing empty segment from router (Issue #1373)
-	(#) Select List -> dependency method: wrong option displayed (Issue #1694)
-	(#) Notices in multilingual mode (Issue #1693)
 
 
 -------------------
