(#) Loading behavior.core in editor. Causing issue while using CodeMirror (Issue #1687)

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -72,6 +72,7 @@ Legend:
 	(#) Select List -> dependency method: wrong option displayed (Issue #1694)
 	(#) Notices in multilingual mode (Issue #1693)
 	(#) Email and URL field show label value when Custom Title option is disabled (Issue #1689)
+	(#) Loading behavior.core in editor. Causing issue while using CodeMirror (Issue #1687)
 
 
 -------------------
