--- a/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -17,6 +17,7 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
+SP.CANNOT_COPY_FILE="Cannot copy file %s to %s"
 SP.CAT_FIELD_SELECT_CAT_WITH_NO_CHILDS="Please select a category without subcategories in field '%s'."
 
 SP.IDENTIFIER_EXPECTED_DESC="Please take care of what you are selecting! Do not mix functions for categories and entries."
