--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -47,6 +47,7 @@ Legend:
     (!) SobiPro's default template is now b3-default3 (Bootstrap 3 version)
     (!) Left column more wide
     (!) Template's abstract class renamed to tplDefault3 to avoid module conflicts
+    (!) Directory iterator - directories before entries
 
 	(-) SobiPro template theme 'blackwidow' removed
 
