Coupon Field. Finishing

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -48,6 +48,7 @@ Legend:
     (!) Left column more wide
     (!) Template's abstract class renamed to tplDefault3 to avoid module conflicts
     (!) Tree layout changed
+    (!) Directory iterator - directories before entries
 
 	(-) SobiPro template theme 'blackwidow' removed
 
