--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -76,6 +76,7 @@ Legend:
 	(#) Notices in multilingual mode (Issue #1693)
 	(#) Email and URL field show label value when Custom Title option is disabled (Issue #1689)
 	(#) Loading behavior.core in editor. Causing issue while using CodeMirror (Issue #1687)
+	(#) Sub-subcategories not visible in category views (Issue #1685)
 
 
 -------------------
