(#) Application's LESS file being compiled even if it doesn't exists yet (Issue #1677)

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,7 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
+COM_SOBIPRO="SobiPro"
 SP.AMN.EDIT="Edit"
 SP.TB.SUBCATEGORY="Sub-Category"
 SP.TB.SECTION="SECTION"
