--- a/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
@@ -63,6 +63,7 @@ SP.SOBI_NATIVE_TASKS_EXPL="Create a menu item to SobiPro"
 
 SOBIPRO="SobiPro"
 COM_SOBIPRO="SobiPro"
+COM_SOBIPRO_CONFIGURATION="SobiPro - ACL"
 
 SP.SOBI_SECTION="Section, Category or Entry"
 SP.SOBI_SECTION_EXPL="Displays a section, category or entry."
