--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -74,9 +74,9 @@ Legend:
 	(#) Notices in router (Issue #1678)
 	(#) Select List -> dependency method: wrong option displayed (Issue #1694)
 	(#) Notices in multilingual mode (Issue #1693)
-	(#) Email and URL field show label value when Custom Title option is disabled (Issue #1689)
-	(#) Loading behavior.core in editor. Causing issue while using CodeMirror (Issue #1687)
-	(#) Application's LESS file being compiled even if it doesn't exists yet (Issue #1677)
+	(#) Email and URL field show label value even if custom title option is disabled (Issue #1689)
+	(#) Loading behavior.core in editor; causing issue while using CodeMirror (Issue #1687)
+	(#) Application's LESS file being compiled even if it doesn't exist yet (Issue #1677)
 	(#) Sub-subcategories not visible in category views (Issue #1685)
 
 
