(+) Support for Entries Module added to the templates

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -38,6 +38,7 @@ Legend:
 	(+) Coupon field support added to the payment template file
 	(+) CSS template scope added
 	(+) List of most popular, new and awaiting approval entries in CPanel
+	(+) Support for Entries Module added to the templates
 
 	(!) publishing_format set to a more readable format by default
 	(!) B3 template folder renamed to 'b3-default3' as path names have to be lowercase
