--- a/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
+++ b/Site/usr/locale/adm/en-GB.SpTpl.default3.ini
@@ -97,4 +97,6 @@ SP.TP.CONFIG.APPCOL="Collection Application"
 SP.TP.CONFIG.APPCOL_NO="Entries per page"
 SP.TP.CONFIG.APPPROFILE="Profile Field"
 SP.TP.CONFIG.APPPROFILE_DV="Entries per line in details view"
+SP.TP.CONFIG.APPEMOD="Entries Module"
+SP.TP.CONFIG.APPEMOD_EIL="Entries in line"
 
