--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -27,7 +27,7 @@ Legend:
 
 
 -------------------
-1.3 ()
+1.3 (28 August 2016)
 -------------------
 	(+) Image field: original image name without extension used for alt and title tag
 	(+) Possibility to add custom fields to a category
@@ -38,7 +38,7 @@ Legend:
 	(+) Coupon field support added to the payment template file
 	(+) CSS template scope added
 	(+) List of most popular, new and awaiting approval entries in CPanel
-	(+) Support for Entries Module added to the templates
+	(+) Support for Entries Module added to the templates settings
 
 	(!) publishing_format set to a more readable format by default
 	(!) B3 template folder renamed to 'b3-default3' as path names have to be lowercase
