--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -79,6 +79,7 @@ Legend:
 	(#) Loading behavior.core in editor; causing issue while using CodeMirror (Issue #1687)
 	(#) Application's LESS file being compiled even if it doesn't exist yet (Issue #1677)
 	(#) Sub-subcategories not visible in category views (Issue #1685)
+	(#) Added Windows 10 to trusted operating systems (Issue #1630)
 
 
 -------------------
