(+) ACL to the XML output

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -39,6 +39,7 @@ Legend:
 	(+) CSS template scope added
 	(+) List of most popular, new and awaiting approval entries in CPanel
 	(+) Support for Entries Module added to the templates settings
+	(+) ACL to the XML output
 
 	(!) publishing_format set to a more readable format by default
 	(!) B3 template folder renamed to 'b3-default3' as path names have to be lowercase
