--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -28,8 +28,10 @@ Legend:
 
 
 -------------------
-1.3.1 (30 August 2016)
+1.3.1 (31 August 2016)
 -------------------
+	(+) Support for SobiPro Template Storage added
+
     (#) View cache doesn't work with absolute template path
 	(#) Select lists show options instead of values
 	(#) B/C with Profile Field (Issue #1699)
