--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -17,6 +17,9 @@
 
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
+
+SP.TP.TEMPLATE_MISSING="The template '%s', used for this section does not longer exist. Please select an existing one."
+
 COM_SOBIPRO="SobiPro"
 SP.AMN.EDIT="Edit"
 SP.TB.SUBCATEGORY="Sub-Category"
