--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -18,6 +18,9 @@
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
 
+SP.FM.LABEL_PLACEHOLDER_ALIAS="Auto-generate from label"
+SP.EN.ENTRY_PLACEHOLDER_ALIAS="Auto-generate from name"
+
 SP.TP.TEMPLATE_MISSING="The template '%s', used for this section does not longer exist. Please select an existing one."
 
 COM_SOBIPRO="SobiPro"
