--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -34,6 +34,7 @@ Legend:
 
     (#) Notice in entry form for category field
     (#) Wrong label shown in textarea for categories field settings
+    (#) Changes in router for calendar field listing navigation with suffix
 
 
 -------------------
