--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -31,6 +31,7 @@ Legend:
 -------------------
 	(+) Message shown if used template does not longer exist
 	(+) Auto-generate placeholders for alias fields (nid)
+	(+) Changing class names and CSS scope while duplicating a template
 
 	(-) Option to choose the side of checkbox and radio buttons removed as not supported by Bootstrap
 
