--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -41,6 +41,8 @@ Legend:
     (#) Changes in router for calendar field listing navigation with suffix
 	(#) Missing settings for inbox in category fields
 	(#) Missing template override in navigation
+	(#) If image won't be re-sized/cropped but original available, original is used
+
 
 -------------------
 1.3.1 (31 August 2016)
