--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -18,6 +18,8 @@
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
 
+SP.FM.IMG.SHOW_IN_CATEGORY="Show"
+SP.FM.IMG.FLOAT="Float"
 SP.FM.LABEL_PLACEHOLDER_ALIAS="Auto-generate from label"
 SP.EN.ENTRY_PLACEHOLDER_ALIAS="Auto-generate from name"
 
