(#) Call to undefined method SPDateListing::getDateEntries() (Issue #1707)

--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -43,6 +43,7 @@ Legend:
 	(#) Missing template override in navigation
 	(#) If image won't be re-sized/cropped but original available, original is used
 	(#) No image type selectable for image field in category view
+	(#) Call to undefined method SPDateListing::getDateEntries() (Issue #1707)
 
 
 -------------------
