Site language texts added

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -18,6 +18,13 @@
 ; Translations are made by our translation teams. See https://www.sigsiu.net/sobipro/available-languages/translation-teams.
 
 
+SP.SITE.LANGUAGE="Download the English language package for SobiPro (en-GB) and the newest language files for SobiPro applications."
+SP.SITE.LANGUAGE_DOWNLOAD="Download"
+SP.SITE.LANGUAGE_JOIN="Join the English Team"
+SP.SITE.LANGUAGE_LANG="English Language"
+SP.SITE.LANGUAGE_TEAM="English Team (United Kingdom)"
+SP.SITE.LANGUAGE_PACKAGE="English Language Package for SobiPro (en-GB)"
+
 SP.FM.IMG.SHOW_IN_CATEGORY="Show"
 SP.FM.IMG.FLOAT="Float"
 SP.FM.LABEL_PLACEHOLDER_ALIAS="Auto-generate from label"
