Site language texts added/3

--- a/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -20,7 +20,7 @@
 
 SP.SITE.LANGUAGE="Download the English language package for SobiPro (en-GB) and the newest language files for SobiPro applications."
 SP.SITE.LANGUAGE_DOWNLOAD="Download"
-SP.SITE.LANGUAGE_HELP="Help Needed!"
+SP.SITE.LANGUAGE_HELP="Help needed!"
 SP.SITE.LANGUAGE_JOIN="Join the English Team"
 SP.SITE.LANGUAGE_LANG="English Language"
 SP.SITE.LANGUAGE_TEAM="English Team (United Kingdom)"
