--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -27,6 +27,14 @@ Legend:
 
 
 -------------------
+1.3.3 ()
+-------------------
+	(+)
+
+	(-) Changed method to determine a super user from authorise( 'core.admin' ) to authorise( 'core.manage', 'com_users' )
+
+
+-------------------
 1.3.2 (11 October 2016)
 -------------------
 	(+) Message shown if used template does not longer exist
