--- a/Site/changelog.txt
+++ b/Site/changelog.txt
@@ -29,9 +29,11 @@ Legend:
 -------------------
 1.3.3 ()
 -------------------
-	(+)
+	(+) Category times available in XML data
 
-	(-) Changed method to determine a super user from authorise( 'core.admin' ) to authorise( 'core.manage', 'com_users' )
+    (!) Bootstrap 3 updated to version 3.3.7 (local and CDN)
+    (!) Font Awesome 4 updated to 4.6.3
+	(!) Changed method to determine a super user from authorise( 'core.admin' ) to authorise( 'core.manage', 'com_users' )
 
 
 -------------------
